--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 
 body {
   font-family: $font-base;
+  overflow: hidden;
 }
 
 app-root {
